fix: 修复ContainerStats解析网络流浪数据时网卡流量数据大于 int.maxvalue 后出现类型装换的错误